welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
/*val vuBiscuit=false
 var compteur=0

	def haveBaggle():Boolean =
	{
		while(!estSurBiscuit)
		{
			compteur=compteur+1
			avance()
				if(compteur>=6)
				{
				recule();recule();recule();recule();recule();recule()
				droite()
				avance()
				gauche()
				compteur=0
				}
				
			
			
		}
		
			
			
			
		return true
	}
*/

def haveBuggle():Boolean ={
	var vuBiscuit=false
		for (compteur<-1 to 7)
		{
			if(estSurBiscuit())
			{
				vuBiscuit=true
			}
		avance()
		}

		return vuBiscuit
}
			}
		}
}
